# open_ai_rust_fn_call_extension

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: derive_extras.rs  derive_smoke.rs  function_call_smoke.rs  function_call_tests.rs  tool_registry_smoke.rs  tool_smoke.rs
tests/ui/: derive_enum_with_data.rs  derive_enum_with_data.stderr  derive_union.rs  derive_union.stderr  derive_unknown_container_attr.rs  derive_unknown_container_attr.stderr  field_attr_unknown.rs  field_attr_unknown.stderr  function_call_on_non_fn.rs  function_call_on_non_fn.stderr
