[package]
name = "open_ai_rust_fn_call_extension"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
open_ai_rust="0.2.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
lazy_static = "1.4"

[dev-dependencies]
open_ai_rust_fn_call_extension = { path = "../open_ai_rust_fn_call_extension" }
