[package]
name = "open_ai_rust_fn_call_extension"
version = "0.2.5"
edition = "2021"
description = "Macros for Open AI function calling to be used with the open_ai_rust crate for syntactic sugar."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.36"
syn = { version = "1.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
lazy_static = "1.4"
